fix: add padding to past workouts page so overflow isn't hidden under navbar

--- a/src/components/PastWorkoutsItem/PastWorkoutsItem.scss
+++ b/src/components/PastWorkoutsItem/PastWorkoutsItem.scss
@@ -78,11 +78,10 @@
     width: 100%;
     box-sizing: border-box;
     overflow: hidden;
-    max-height: 0;
     background: $secondary-background;
     padding: 1rem;
-    transition: 0.1s max-height linear;
     padding: 0;
+    height: 0;
   }
   .collapse.show {
     display: flex;
@@ -90,7 +89,6 @@
     justify-content: center;
     align-items: center;
     height: fit-content;
-    max-height: 500px;
 
     .workout-data {
       border-top: 1px solid $tertiary-text;
